--- a/src/components/MoneyManager/index.css
+++ b/src/components/MoneyManager/index.css
@@ -58,7 +58,7 @@
   align-items: center;
   box-shadow: 3px 3px 3px 3px #7e858e;
   min-height: 50px;
-  width: 25%;
+  width: 50%;
   padding: 20px;
   margin: 20px;
 }
@@ -73,6 +73,7 @@
   font-family: 'Roboto';
   font-size: small;
   text-align: left;
+  font-weight: 600;
   height: 35px;
   width: 300px;
   padding: 10px;
@@ -85,6 +86,7 @@
   font-family: 'Roboto';
   font-size: small;
   text-align: left;
+  font-weight: 800;
   margin: 10px;
 }
 .options {
@@ -109,6 +111,7 @@
   border: 1px solid #7e858e;
   border-radius: 9px;
   width: 60%;
+  padding: 20px;
 }
 
 .add-button {
@@ -119,4 +122,32 @@
   border-radius: 5px;
   padding: 9px;
   width: 100px;
+}
+.transaction-details {
+  height: 100%;
+  border-radius: 8px;
+  width: 90%;
+}
+.table {
+  padding-left: 0;
+  margin: 0;
+}
+.list-heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 48px;
+  list-style-type: none;
+  border: 1px solid #cbd5e1;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.table-header {
+  color: #334155;
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-weight: 800;
+  width: 30%;
+  border-right: none;
 }
